# redundant_attributes_with_CGP

./: Cargo.toml  README.md
src/: global_params.rs  lib.rs  main.rs
src/datasets/: _pendigits.rs  abalone.rs  breast_cancer.rs  credit.rs  crossvalidation.rs  dataset_utils.rs  fitness_metric_type.rs  mod.rs  page_blocks.rs  shuttle.rs  waveform.rs
src/datasets/data/: abalone.data  dataset_32_pendigits.csv
src/datasets/data/credit/: attributes_test.csv  attributes_train.csv  label_test.csv  label_train.csv
src/datasets/data/shuttle/: attributes_test.csv  label_test.csv  label_train.csv
src/utils/: cycle_checker.rs  fitness_metrics.rs  logging_stuff.rs  mod.rs  node_type.rs  runner.rs  symbolic_regression_functions.rs  utility_funcs.rs
src/vanilla_cgp/: chromosome.rs  mod.rs  node.rs
